--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
