--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,16 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin />
+    <script
+  src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+  crossorigin />
+
+<script
+  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+  crossorigin
+/>
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
