change meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션 성서봇"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
@@ -40,8 +40,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
-    <title>성서봇</title>
-    <meta name="description" content="한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션 성서봇" />
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
