--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
-    
+    <title>성서봇</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
