--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
-    <title>성서봇</title>
+    <title>성서봇 | 한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션 성서봇</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
