--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>성서봇 | 한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션 성서봇</title>
+    <title>성서봇</title>
     <style type="text/css">
       body {
         margin: 0;
