--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="pwacontainer">
-        <div class="pwacontainer__title">성서봇</div>
-        <div class="pwacontainer__desc">한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션</div>
-        <div class="pwacontainer__loading">LOADING...</div>
+        <h1 class="pwacontainer__title">성서봇</h1>
+        <p class="pwacontainer__desc">한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션</p>
+        <span class="pwacontainer__loading">LOADING...</span>
       </div>
     </div>
     <script>
