--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,18 @@
       name="description"
       content="한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션 성서봇"
     />
+    <! --
+        pwa theme color
+     -->
+     <meta name="theme-color" content="#ffffff">
+     <meta name="apple-mobile-web-app-capable" content="yes">
+     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-256.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ibarra+Real+Nova|Roboto&display=swap" rel="stylesheet">
+    
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin />
     <script
