--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" sizes="256x256" href="icon-256.png">
     <title>성서봇</title>
     <style type="text/css">
       body {
