--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,7 @@
       name="description"
       content="한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션 성서봇"
     />
-    <!--
-        pwa theme color
-     -->
-     <meta name="theme-color" content="#ffffff">
-     <meta name="apple-mobile-web-app-capable" content="yes">
-     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-256.png" />
@@ -39,7 +34,7 @@
     
     <script src="https://kit.fontawesome.com/06b5185406.js" crossorigin="anonymous"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" sizes="256x256" href="icon-256.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons192.png" />
     <title>성서봇</title>
     <style type="text/css">
       body {
