--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
     <meta
       name="description"
-      content="한국성서대학교 대표 모바일 전용 인트라넷 웹 어플리케이션 성서봇"
+      content="한국성서대학교 대표 데스크탑 전용 인트라넷 웹 어플리케이션 성서봇"
     />
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
